style.css
/* ... */
.nav-primary .sub-menu a {
	background: none;
	background-color: #9c1a03;
	border: 1px solid #ba1a00;
	color: #fff;
}

.nav-primary .sub-menu a:hover {
	background: none;
	background-color: #ba1a00;
}

/* Secondary Navigation
--------------------------------------------- */

.nav-secondary {
	background: #333;
	border-bottom: 2px solid #ba1a00;
	max-width: 1014px;
	margin: 15px auto 0;
	margin: 1.5rem auto 0;
}

.nav-secondary a {
	padding: 10px 15px;
	padding: 1rem 1.5rem;
}

.nav-secondary a:hover,
.nav-secondary .current-menu-item > a {
	color: #eee;
	background: #444;
}

.nav-secondary .sub-menu a {
	background: none;
	background-color: #444;
	color: #fff;
	border: none;
}

.nav-secondary .sub-menu a:hover {
	background: none;
	background-color: #333;
}


/*
Content Area
---------------------------------------------------------------------------------------------------- */

/* Entries
--------------------------------------------- */

.entry {
	background-color: #fff;
	border: 5px solid #e5e5e5;
	border-radius: 3px;
	margin-bottom: 20px;
	margin-bottom: 2rem;
	padding: 20px 20px 24px;
	padding: 2rem 2rem 2.4rem;
}

.entry-content a {
	border-bottom: 1px dotted #ba1a00;
	color: #ba1a00;
}

.entry-content a:hover {
	color: #333;
}

.entry-content .attachment a,
.entry-content .gallery a {
	border: none;
}

.entry-content ol,
.entry-content p,
.entry-content ul,
.quote-caption {
	margin-bottom: 26px;
	margin-bottom: 2.6rem;
}

.entry-content ol,
.entry-content ul {
	margin-left: 40px;
	margin-left: 4rem;
}

.entry-content ol li {
	list-style-type: decimal;
}

.entry-content ul li {
	list-style-type: disc;
}

.entry-content ol ol,
.entry-content ul ul {
	margin-bottom: 0;
}

.entry-content .search-form {
	width: 50%;
}

.entry-meta {
	clear: both;
	color: #999;
	font-size: 12px;
	font-size: 1.2rem;
	font-family: 'PT Sans', sans-serif;
}

.entry-meta a {
	border-bottom: 1px solid #ddd;
	font-weight: 700;
}

.entry-footer .entry-meta {
	border-top: 2px solid #f5f5f5;
	margin: 0;
	padding: 20px 0;
	padding: 2rem 0;
}

.entry-comments-link::before {
	margin: 0 6px 0 2px;
	margin: 0 0.6rem 0 0.2rem;
}

.entry-categories,
.entry-tags {
	display: block;
}

/* Post Icons
------------------------------------------------------------ */

.entry-meta .entry-categories {
	background: url(images/folder.png) no-repeat top left;
	padding-left: 20px;
	padding-left: 2rem;
}

.entry-meta .entry-tags {
	background: url(images/tag.png) no-repeat top left;
	margin-top: 10px;
	margin-top: 1rem;
	padding-left: 20px;
	padding-left: 2rem;
}
	
.entry-meta .entry-comments-link {
	background: url(images/comments.png) no-repeat center left;
	float: right;
	padding-left: 20px;
	padding-left: 2rem;
}

.entry-meta .entry-time {
	background: url(images/time.png) no-repeat center left;
	padding-left: 20px;
	padding-left: 2rem;
}


/* Pagination
--------------------------------------------- */

.archive-pagination,
.entry-pagination {
	font-size: 14px;
	font-size: 1.4rem;
	margin: 40px 0;
	margin: 4rem 0;
}

.archive-pagination li {
	display: inline;
}

.archive-pagination li a {
	background-color: #333;
	border-radius: 3px;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	padding: 8px 12px;
	padding: 0.8rem 1.2rem;
}

.archive-pagination li a:hover,
.archive-pagination li.active a {
	background-color: #ba1a00;
}

.entry-pagination a {
	border-bottom: 1px solid #ddd;
}

.breadcrumb {
	color: #333;
	font-size: 12px;
	font-size: 1.2rem;
	margin: 0 0 30px;
	margin: 0 0 3rem;
	padding: 10px 15px;
	padding: 1rem 1.5rem;
	border-bottom: 1px solid #eee;
	background-color: #f5f5f5;
}

.breadcrumb a {
	color: #333;
}

.breadcrumb a:after {
	  content: '\276f \276f';
    padding: 0 10px;
}

.breadcrumb .home {
	margin: 0 5px 0 0;
	margin: 0 0.5rem 0 0;
}

.entry .pagination {
	border-top: 2px solid #eee;
}

.entry .pagination-previous:before {
	content: 'PREV STORY';
	text-align: center;
	width: 100%;
	font-size: 12px;
	font-size: 1.2rem;
	display: block;
	color: #999;
	padding-bottom: 10px;
}

.entry .pagination-previous {
	padding: 10px 5px 10px 10px;
	width: 50%;
	min-height: 100px;
	text-align: center;
}

.entry .pagination-previous:hover {
	background: #f8f8f8;
	-webkit-transition: 0.3s linear all;
	-moz-transition: 0.3s linear all;
	-ms-transition: 0.3s linear all;
	-o-transition: 0.3s linear all;
	transition: 0.3s linear all;
}

.entry .pagination-next:before {
	content: 'NEXT STORY';
	text-align: center;
	width: 100%;
	color: #999;
	font-size: 12px;
	font-size: 1.2rem;
	display: block;
	padding-bottom: 10px;
}

.entry .pagination-next {
	padding: 10px 10px 10px 5px;
	width: 50%;
	min-height: 100px;
	text-align: center;
}

.entry .pagination-next:hover {
	background: #f8f8f8;
	-webkit-transition: 0.3s linear all;
	-moz-transition: 0.3s linear all;
	-ms-transition: 0.3s linear all;
	-o-transition: 0.3s linear all;
	transition: 0.3s linear all;
}



/* Comments
--------------------------------------------- */

#respond {
	margin-top: 20px;
	padding: 20px;
	padding: 2rem;
}

.comment-respond,
.entry-comments,
.entry-pings {
	background-color: #fff;
	margin-bottom: 20px;
	margin-bottom: 2rem;
}

.entry-comments {
	padding: 20px;
	padding: 2rem;
}

.comment-respond,
.entry-pings {
	padding: 40px 40px 16px;
	padding: 4rem 4rem 1.6rem;
}

.comment-respond a,
.entry-comments a {

}

.comment-content,
.comment-reply {
	clear: both;
	margin-left: 56px;
	margin-left: 5.6rem;
	margin-right: 30px;
	margin-right: 3rem;
}

.entry-comments .comment-author {
	margin-bottom: 0;
}

.comment-respond input[type="email"],
.comment-respond input[type="text"],
.comment-respond input[type="url"] {
	width: 50%
}

.comment-respond label {
	display: block;
	margin-right: 12px;
	margin-right: 1.2rem;
}

.comment-list li,
.ping-list li {
	list-style-type: none;
}

.comment-list li {
	margin-top: 24px;
	margin-top: 2.4rem;
}

.comment-list li li {
	margin-right: -32px;
	margin-right: -3.2rem;
}

li.comment {

}
/* ... */

